[REFACTOR] Cleaned up audit trail code for final touches